--- a/lib/food_ordering_web/components/layouts/root.html.heex
+++ b/lib/food_ordering_web/components/layouts/root.html.heex
@@ -8,6 +8,7 @@
       <%= assigns[:page_title] || "FoodOrdering" %>
     </.live_title>
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
+    <link rel="icon" type="image/x-icon" href="/images/logo.PNG">
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
   </head>
