--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,3 +3,16 @@
 @import "tailwindcss/utilities";
 
 /* This file is for your main application CSS */
+@keyframes slide {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+  
+  .animate-slide {
+    display: flex;
+    animation: slide 20s linear infinite;
+  }
