--- a/lib/food_ordering_web/components/layouts/app.html.heex
+++ b/lib/food_ordering_web/components/layouts/app.html.heex
@@ -2,7 +2,7 @@
   <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
     <div class="flex items-center gap-4">
       <a href="/">
-        <img src={~p"/images/logo.PNG"} width="50" />
+        <img src={"/images/logo.PNG"} width="50" />
       </a>
       <p class="bg-brand/5 text-brand rounded-full px-2 font-medium leading-6">
       </p>
